# CoralKita

./: README.md  package-lock.json  package.json  pom.xml
AI_chatbot/: Dockerfile  chatbot.py  coral.csv  docker-compose.yml  requirements.txt
AI_chatbot/faiss_db/: index.faiss  index.pkl
AI_image_classification/: coral_classification_api.py
backend/: .gitignore  COMPILER_FIX.md  Dockerfile  Dockerfile.absolute  Dockerfile.debug  Dockerfile.java17  Dockerfile.simple  RAG_API_README.md  README.md  pom.xml  test-backend-connection.html  test-docker-build.bat  test-docker-build.sh
backend/common/: pom.xml
backend/pojo/: pom.xml
backend/server/: pom.xml
classification/: coral_classification_api.py  my_img_class.py  requirements.txt  train.ipynb
docs/: OpenAPI  index.html
docs/api-docs/: openapi.yaml
frontend/: ANSWER_VALIDATION_DEBUG.md  ANSWER_VALIDATION_FIXES.md  API_TEST.html  App.vue  CONFIG_README.md  Dockerfile  LOGIN_README.md  QUIZ_API_TROUBLESHOOTING.md  QUIZ_README.md  debug-api.html  index.html  nginx.conf  package-lock.json  package.json  start.bat  test.html  webpack.config.js
frontend/bulid/: webpack.base.conf.js
frontend/frontend/: QUIZ_COMPLETION_FEATURES.md  QUIZ_SYSTEM_FINAL.md  package-lock.json  package.json  test-image.html  test.html  webpack.config.js
frontend/info/: refs
pojo/: pom.xml
rag/: Dockerfile  debug_chromadb.py  docker-compose.yml  prefetch_models.py  pyproject.toml  rag.ipynb  rag_http_server.py  test_rag_debug.py
rag/chroma_db/1ec8fe0d-4a8d-4564-87e9-3c924280b2c1/: index_metadata.pickle
server/: pom.xml
(+138 files in other folders)
