[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "openai>=1.0.0", # DeepSeek API使用OpenAI兼容接口
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "ipykernel>=6.30.1",
    "pypdf>=3.0.0",  # PDF处理
    "tqdm>=4.0.0",   # 进度条
]
